--- a/projecten_PF/js_form_ontvanger.html
+++ b/projecten_PF/js_form_ontvanger.html
@@ -19,6 +19,8 @@
 window.onload = function(){
 	
 	schrijfParen();
+        console.log('login: ' + window.localStorage.getItem("username")+ "; "+
+       window.localStorage.getItem("password"));
 };
 //****************
 function getQueryString(){
